# mafagafos-desktop

./: .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  build.xml  preinstall.sh  run.sh  sdl2-app.cpp
gimp/gui/: button.xcf
includes/: global.h
includes/api/: scene.h  screen.h
includes/scene/: LogoScreen.h
src/: global.c  main.c
src/api/: scene.c  screen.c
src/scene/: LogoScreen.c
